changed-the-shop-now-button

--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
           <p class="text-lg mb-6">
             Discover the best deals on top products. Shop now and save big!
           </p>
-          <button
+          <a
+            href="#products"
             class="bg-white text-blue-600 py-2 px-6 rounded-lg font-semibold hover:b-gray-300 transition duration-500 ease-out transform hover:scale-125"
           >
             Shop Now
-          </button>
+        </a>
         </div>
       </section>
       <!-- Products Section -->
@@ -124,7 +125,7 @@
         <h2 class="text-3xl font-bold text-gray-950 text-center mb-6">
           Featured Products
         </h2>
-        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <div class="grid md:g rid-cols-2 lg:grid-cols-4 gap-6">
           <!-- Product Card 1 -->
           <div class="bg-white p-4 rounded-lg shadow-md">
             <img
