--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
           </p>
           <a
             href="#products"
-            class="bg-white text-blue-600 py-2 px-6 rounded-lg font-semibold hover:b-gray-300 transition duration-500 ease-out transform hover:scale-125"
+            class="bg-white text-blue-600 py-2 px-6 rounded-lg font-semibold hover:b-gray-300"
           >
             Shop Now
-        </a>
+          </a>
         </div>
       </section>
       <!-- Products Section -->
